--- a/index.css
+++ b/index.css
@@ -1,30 +1,136 @@
 body {
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width:100%;
+  height:100%;
+  display: grid;
+  grid-template-rows:5% 90%; 
+}
+
+#modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #44444444;
+}
+#modal-dialog{
+  position: fixed;
+  top: 50%;
+  left: 25%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content:center;
+  width: 50%;
+  background-color: #2277BBFF;
+  padding: 1em;
+}
+#modalBtnDiv{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+p.modal{
+  text-align: center;
 }
 .hidden {
   visibility: hidden;
+  height: 0 !important;
 }
-
+div.regular {
+  pointer-events: none;
+}
+.bi {
+  pointer-events: none;
+}
+.iconBtn {
+  width: 2.5em;
+  height: 2.5em;
+}
+.textBtn {
+  height: 2.5em;
+}
+.bi {
+  height: 1em;
+  width: 1em;
+  font-size: 1.25em;
+}
+#settingsDiv {
+  grid-row: 1;
+  display: inline-block;
+}
+#controls {
+  display: grid;
+  grid-auto-flow:row;
+}
 #soundboard{
-  height:80%;
-  width:80%;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  justify-content: center;
+  grid-template-rows: 25% 25% 25% 25%;
+  height: 80%;
+  width: 100%;
 
 }
-
-button {
+.soundBtn {
   width: 100%;
   height: 100%;
 }
 .row {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  width: 100%;
 }
+/* #row1 {
+  grid-row: 1;
+}
+#row2 {
+  grid-row: 2;
+}
+#row3 {
+  grid-row: 3;
+}
+#row4 {
+  grid-row: 4;
+}
+.col1 {
+  grid-column:2;
+}
+.col2 {
+  grid-column: 3;
+}
+.col3 {
+  grid-column: 4;
+}
+.col4 {
+  grid-column: 5;
+} */
 .cell{
-  width: 25vw;
-  height: 25vh;
+  width: 100%;
+  height: 100%;
+}
+
+/* button classes*/
+.deleteBtn {
+  background-color: #cc0000
+}
+.deleteIcon {
+  width: 1em;
+  height: 1em;
+}
+.playBtn {
+  background-color: #009900
+}
+.playingBtn {
+  background-color: #00CC00
+}
+.setBtn {
+  background-color: #b3b3b3
+}
+.editBtn {
+  background-color: #d6d6d6;
+  pointer-events: none;
 }
