--- a/index.css
+++ b/index.css
@@ -1,13 +1,20 @@
+@font-face {
+  font-family: 'Jura';
+  src: url(res/Jura-VariableFont_wght.ttf);
+}
 body {
   position: fixed;
   top: 0;
   left: 0;
   margin: 0;
-  padding: 0;
-  width:100%;
-  height:100%;
-  display: grid;
-  grid-template-rows:5% 90%; 
+  padding: 1.5%;
+  width: 97%;
+  height:97%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #222327;
+  /* grid-template-columns: 0% 5% 10% 100%; */
 }
 
 #modal{
@@ -46,13 +53,24 @@ div.regular {
 }
 .bi {
   pointer-events: none;
+  fill: #606060;
 }
 .iconBtn {
   width: 2.5em;
   height: 2.5em;
+  background-color: #b3b3b3;
+  border: 1px solid #939393;
+  border-radius: 0.25em;
+  margin-left: 0.25%;
+  margin-right: 0.25%;
 }
 .textBtn {
-  height: 2.5em;
+  height: 95%;
+  background-color: #b3b3b3;
+  border: 1px solid #939393;
+  border-radius: 0.25em;
+  margin-left: 0.25%;
+  margin-right: 0.25%;
 }
 .bi {
   height: 1em;
@@ -60,59 +78,73 @@ div.regular {
   font-size: 1.25em;
 }
 #settingsDiv {
-  grid-row: 1;
-  display: inline-block;
+  display: inline-flex;
+  flex-direction: row;
+  margin-left: 0.5%;
+  margin-top: 0.5%;
+  margin-right: 0.5%;
+  margin-bottom: 0.25%;
 }
 #controls {
-  display: grid;
-  grid-auto-flow:row;
+  display: inline-flex;
+  flex-direction: row;
 }
 #soundboard{
   display: grid;
-  justify-content: center;
-  grid-template-rows: 25% 25% 25% 25%;
-  height: 80%;
-  width: 100%;
-
+  width: 99%;
+  height: 100%;
+  margin-left: 0.5%;
+  margin-bottom: 0.5%;
+  margin-right: 0.5%;
+  grid-auto-columns: max-content;
+  grid-auto-flow: dense;
+  grid-auto-rows: max-content;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: repeat(4, 25%);
+  justify-items: center;
+  align-items: center;
+}
+.setSound {
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+  width: 99%;
+  display: flex;
+  align-items: baseline;
+}
+.setSound > label {
+  font-family: 'Jura', sans-serif;
+  font-size: 1.25em;
+  font-weight: 500;
+  text-align: right;
+  text-decoration-skip-ink: auto;
+  text-decoration: underline #c0c0c0 solid 2px;
+  color:#c0c0c0;
+  width:15%;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+}
+.setSound > select {
+  width: 74%;
+  height: 95%;
+}
+.setSound > button {
+  width: 10%;
 }
 .soundBtn {
-  width: 100%;
-  height: 100%;
+  font-family: 'Jura';
+  font-weight: 700;
+  border-radius: 0.25em;
+  border: 3px solid;
+  margin: 0.5%;
+  width: 99%;
+  height: 99%;
 }
 .row {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  display: inline-flex;
+  flex-direction: row;
   width: 100%;
+  height: 25%;
 }
-/* #row1 {
-  grid-row: 1;
-}
-#row2 {
-  grid-row: 2;
-}
-#row3 {
-  grid-row: 3;
-}
-#row4 {
-  grid-row: 4;
-}
-.col1 {
-  grid-column:2;
-}
-.col2 {
-  grid-column: 3;
-}
-.col3 {
-  grid-column: 4;
-}
-.col4 {
-  grid-column: 5;
-} */
-.cell{
-  width: 100%;
-  height: 100%;
-}
-
 /* button classes*/
 .deleteBtn {
   background-color: #cc0000
@@ -122,15 +154,19 @@ div.regular {
   height: 1em;
 }
 .playBtn {
-  background-color: #009900
+  background-color: #009900;
+  border-color: #007900;
 }
 .playingBtn {
-  background-color: #00CC00
+  background-color: #00CC00;
+  border-color: #00AC00;
 }
 .setBtn {
-  background-color: #b3b3b3
+  background-color: #b3b3b3;
+  border-color:#939393;
 }
 .editBtn {
   background-color: #d6d6d6;
+  border-color: #b6b6b6;
   pointer-events: none;
 }
